--- a/Instructions/style.css
+++ b/Instructions/style.css
@@ -1,17 +1,79 @@
- /* h1 heading tag */
- h1 {
-    /* Put a 15-pixel margin at the bottom of the heading. */
-    margin-bottom: 15px;
-    /* Change the size of your font to 60 pixels high. */
+/* Styling for HTML elements */
+body {
+    padding: 0;
+    margin: 0;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 18px;
+    line-height: 150%;
+    color: #333;
+    background: #efeee7;
+  }
+  
+  header {
+    background: #333;
+  }
+  
+
+
+  h1 {
+    padding: 20px 0;
+    margin: 0;
+    margin-bottom: 10px;
     font-size: 40px;
-    /* This will color the heading font white. */
-    color: rgb(92, 146, 218);
-    /* Align the text to the center of its enclosing element (e.g. div). */
+    font-weight: 700;
+    color: rgb(59, 122, 216);
     text-align: left;
-    /* Underline the text. */
-    text-decoration: underline;
-    /* The background of the heading element will now be black. */
-    background-color: rgb(252, 252, 252);
+  }
+  
+
+  h2 {
+    padding: 30px 0;
+    margin: 0;
+    margin-bottom: 0px;
+    font-size: 24px;
+    font-weight: bold;
+    color: rgb(10, 10, 10);
+    text-align: left;
   }
 
+  h3 {
+    padding: 15px 0;
+    margin: 0;
+    margin-bottom: 0px;
+    text-decoration: underline;
+    font-size: 18px;
+    font-weight: normal;
+    color: rgb(10,10,10);
+    text-align: left;
+  }
+
+  h4 {
+    padding: 10px 0;
+    margin: 0;
+    margin-bottom: 0px;
+    font-size: 14px;
+    font-weight: normal;
+    color: rgb(16, 10, 10);
+    text-align: left;
+  }
+
+  h5 {
+    padding: 10px 10px;
+    margin: 0;
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: rgb(248, 246, 246);
+    text-align: left;
+  }
+
+  h6 {
+    padding: 0px 0;
+    margin: 0;
+    margin-bottom: 0px;
+    font-size: 26px;
+    font-weight: 700;
+    color: rgb(230, 42, 42);
+    text-align: left;
+  }
   
