--- a/Instructions/cities_files/stylesheet.css
+++ b/Instructions/cities_files/stylesheet.css
@@ -4,35 +4,6 @@ col
 	{mso-width-source:auto;}
 br
 	{mso-data-placement:same-cell;}
-.style85
-	{color:#0563C1;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:underline;
-	text-underline-style:single;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;
-	mso-style-name:Hyperlink;
-	mso-style-id:8;}
-a:link
-	{color:#0563C1;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:underline;
-	text-underline-style:single;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;}
-a:visited
-	{color:#954F72;
-	font-size:11.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:underline;
-	text-underline-style:single;
-	font-family:Calibri, sans-serif;
-	mso-font-charset:0;}
 .style0
 	{mso-number-format:General;
 	text-align:general;
@@ -79,26 +50,25 @@ td
 	text-align:center;}
 .xl66
 	{mso-style-parent:style0;
-	font-weight:700;
-	border-top:none;
-	border-right:none;
-	border-bottom:1.0pt solid windowtext;
-	border-left:none;}
+	mso-number-format:"\[$-409\]m\/d\/yy\\ h\:mm\\ AM\/PM\;\@";
+	text-align:center;}
 .xl67
 	{mso-style-parent:style0;
+	font-size:12.0pt;
 	font-weight:700;
-	text-align:center;
 	border-top:none;
 	border-right:none;
-	border-bottom:1.0pt solid windowtext;
+	border-bottom:.5pt solid windowtext;
 	border-left:none;}
 .xl68
 	{mso-style-parent:style0;
-	mso-number-format:"\[$-409\]m\/d\/yy\\ h\:mm\\ AM\/PM\;\@";}
+	font-size:12.0pt;}
 .xl69
-	{mso-style-parent:style85;
-	color:#0563C1;
-	text-decoration:underline;
-	text-underline-style:single;
+	{mso-style-parent:style0;
+	font-size:12.0pt;
+	text-align:center;}
+.xl70
+	{mso-style-parent:style0;
+	font-size:12.0pt;
 	mso-number-format:"\[$-409\]m\/d\/yy\\ h\:mm\\ AM\/PM\;\@";
-	vertical-align:middle;}
+	text-align:center;}
